Fix host prefix

--- a/factgenie/templates/browse.html
+++ b/factgenie/templates/browse.html
@@ -31,7 +31,7 @@
   <nav class="navbar navbar-light bg-annotate">
     <div class="container navbar-left">
       <div class="navblock">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="{{ host_prefix }}/">
           <img src="{{ host_prefix }}/static/img/genie.png" width="25px">
           <span style="margin-left: 5px; margin-right: 10px; font-weight: bold;">factgenie</span>
         </a>
