--- a/factgenie/templates/about.html
+++ b/factgenie/templates/about.html
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar navbar-light bg-annotate justify-content-center">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="{{ host_prefix }}/">
       <img src="{{ host_prefix }}/static/img/genie.png" width="25px">
       <span style="margin-left: 5px; font-weight: bold;">factgenie</span>
     </a>
@@ -22,7 +22,7 @@
 </body>
 
 <div class="container w-50 mt-5">
-  <a href="/" class="btn btn-outline-secondary mb-5">← Main page</a>
+  <a href="{{ host_prefix }}/" class="btn btn-outline-secondary mb-5">← Main page</a>
   <div id="about-info" class="area-content">
     <p><img src=" {{ host_prefix }}/static/img/genie.png" width="25px">
       <span style="margin-left: 5px; font-weight: bold;">factgenie</span> is a toolkit for visualizing and annotating
