--- a/factgenie/templates/campaign.html
+++ b/factgenie/templates/campaign.html
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar navbar-light bg-annotate justify-content-center">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="{{ host_prefix }}/">
       <img src="{{ host_prefix }}/static/img/genie.png" width="25px">
       <span style="margin-left: 5px; font-weight: bold;">factgenie</span>
     </a>
@@ -24,7 +24,7 @@
 <div class="container w-50 mt-5">
 
   <div class="mt-5">
-    <a href="/crowdsourcing" class="btn btn-outline-secondary mb-5">← List of campaigns</a>
+    <a href="{{ host_prefix }}/crowdsourcing" class="btn btn-outline-secondary mb-5">← List of campaigns</a>
     <h3><b>{{ campaign_id }}</b></h3>
 
     <div class="card text-center">
