--- a/factgenie/templates/crowdsourcing.html
+++ b/factgenie/templates/crowdsourcing.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-light bg-annotate justify-content-center">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="{{ host_prefix }}/">
       <img src="{{ host_prefix }}/static/img/genie.png" width="25px">
       <span style="margin-left: 5px; font-weight: bold;">factgenie</span>
     </a>
@@ -25,7 +25,7 @@
 
 
 <div class="container w-75 mt-5">
-  <a href="/" class="btn btn-outline-secondary mb-5">← Main page</a>
+  <a href="{{ host_prefix }}/" class="btn btn-outline-secondary mb-5">← Main page</a>
   <!-- button for modal popup: new campaign -->
   <button type="button" class="btn btn-primary mb-5" data-bs-toggle="modal" data-bs-target="#new-campaign-modal">New
     Campaign</button>
@@ -58,11 +58,11 @@
             <td>{{ campaign.metadata.prolific_code }}</td>
             <td>
               <!-- use font awesome icons for buttons -->
-              <a href="/crowdsourcing/campaign?campaign={{ campaign.metadata.id }}" class="btn btn-outline-secondary"
-                data-bs-toggle="tooltip" title="Show campaign details">
+              <a href="{{ host_prefix }}/crowdsourcing/campaign?campaign={{ campaign.metadata.id }}"
+                class="btn btn-outline-secondary" data-bs-toggle="tooltip" title="Show campaign details">
                 <i class="fa fa-list"></i>
               </a>
-              <a href="/annotate?campaign={{ campaign.metadata.id }}" class="btn btn-outline-secondary"
+              <a href="{{ host_prefix }}/annotate?campaign={{ campaign.metadata.id }}" class="btn btn-outline-secondary"
                 data-bs-toggle="tooltip" title="Preview the crowdsourcing page">
                 <i class="fa fa-eye"></i>
               </a>
