--- a/factgenie/templates/crowdsourcing.html
+++ b/factgenie/templates/crowdsourcing.html
@@ -58,7 +58,7 @@
             <td>{{ campaign.metadata.prolific_code }}</td>
             <td>
               <!-- use font awesome icons for buttons -->
-              <a href="{{ host_prefix }}/crowdsourcing/campaign?campaign={{ campaign.metadata.id }}"
+              <a href="{{ host_prefix }}/crowdsourcing/detail?campaign={{ campaign.metadata.id }}"
                 class="btn btn-outline-secondary" data-bs-toggle="tooltip" title="Show campaign details">
                 <i class="fa fa-list"></i>
               </a>
@@ -66,7 +66,7 @@
                 data-bs-toggle="tooltip" title="Preview the crowdsourcing page">
                 <i class="fa fa-eye"></i>
               </a>
-              <a onclick="deleteCampaign('{{ campaign.metadata.id }}')" class="btn btn-outline-danger"
+              <a onclick="deleteCampaign('{{ campaign.metadata.id }}', 'human')" class="btn btn-outline-danger"
                 data-bs-toggle="tooltip" title="Delete the campaign">
                 <i class="fa fa-trash"></i>
               </a>
