--- a/factgenie/templates/llm_eval.html
+++ b/factgenie/templates/llm_eval.html
@@ -27,12 +27,12 @@
 <div class="container w-75 mt-5">
   <a href="{{ host_prefix }}/" class="btn btn-outline-secondary mb-5">← Main page</a>
   <!-- button for modal popup: new campaign -->
-  <button type="button" class="btn btn-primary mb-5" data-bs-toggle="modal" data-bs-target="#new-eval-modal">New
+  <button type="button" class="btn btn-primary mb-5" data-bs-toggle="modal" data-bs-target="#new-eval-modal">New LLM
     eval</button>
 
 
   <div class="mt-1">
-    <h3>List of evals</h3>
+    <h3>💻️ List of LLM evals</h3>
     <div id="campaigns">
       <table class="table">
         <thead>
@@ -55,11 +55,11 @@
             </td>
             <td>
               <!-- use font awesome icons for buttons -->
-              <a href="{{ host_prefix }}/crowdsourcing/campaign?campaign={{ campaign.metadata.id }}"
+              <a href="{{ host_prefix }}/llm_eval/detail?campaign={{ campaign.metadata.id }}"
                 class="btn btn-outline-secondary" data-bs-toggle="tooltip" title="Show campaign details">
                 <i class="fa fa-list"></i>
               </a>
-              <a onclick="deleteCampaign('{{ campaign.metadata.id }}')" class="btn btn-outline-danger"
+              <a onclick="deleteCampaign('{{ campaign.metadata.id }}', 'model')" class="btn btn-outline-danger"
                 data-bs-toggle="tooltip" title="Delete the campaign">
                 <i class="fa fa-trash"></i>
               </a>
@@ -88,7 +88,7 @@
                 <div class="form-group">
                   <label for="campaignId">Campaign Id</label>
                   <input type="text" class="form-control" id="campaignId" name="campaignId"
-                    placeholder="Enter a unique identifier" required>
+                    value="{{ default_campaign_id }}" required>
                 </div>
 
                 <div class="accordion accordion-flush" id="accordion-data">
@@ -131,20 +131,43 @@
                             }}</label>
                           {% endfor %}
                         </div>
-                        <div class="form-group">
-                          <!-- select for sort order -->
-                          <label for="sortOrder">Group outputs</label>
-                          <select class="form-select" id="sortOrder" name="sortOrder">
-                            <option value="random">Random</option>
-                            <option value="example">Example-wise (shuffled)</option>
-                          </select>
-                        </div>
-                        <button class="btn btn-outline-secondary btn-sm" type="button" data-bs-toggle="collapse"
+                        <button class="btn btn-outline-secondary btn-sm mt-3" type="button" data-bs-toggle="collapse"
                           onclick="updateSelectedDatasets()" data-bs-target="#selectedDatasets" aria-expanded="false"
                           aria-controls="selectedDatasets">Show
                           included data</button>
                         <div class="collapse" id="selectedDatasets">
                           <div class="card card-body font-monospace" id="selectedDatasetsContent">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion accordion-flush" id="accordion-llm-config">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingTwo-data">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseTwo-data" aria-expanded="false"
+                          aria-controls="flush-collapseTwo-data">
+                          <i class="fa fa-code"></i>
+                          <span style="margin-left: 10px;">LLM config</span>
+
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo-data" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingTwo-data" data-bs-parent="#llm-config">
+                        <div class="accordion-body">
+                          <!-- selectbox -->
+                          <div class="form-group">
+                            <label for="llmConfig">LLM config</label>
+                            <p>
+                              <small class="text-muted">Add your custom configuration file to
+                                <code>factgenie/llm-eval</code>.</small>
+                            </p>
+                            <select class="form-select" id="llmConfig" name="llmConfig">
+                              {% for llm_metric_name in llm_metrics %}
+                              <option value="{{ llm_metric_name }}">{{ llm_metric_name }}</option>
+                              {% endfor %}
+                            </select>
                           </div>
                         </div>
                       </div>
@@ -157,7 +180,7 @@
           </div>
 
           <div class="modal-footer">
-            <button type="submit" class="btn btn-primary mt-3" onclick="runModelEval();">Run eval</button>
+            <button type="submit" class="btn btn-primary mt-3" onclick="createLLMEval();">Create eval</button>
           </div>
         </div>
       </div>
