--- a/factgenie/templates/llm_eval_detail.html
+++ b/factgenie/templates/llm_eval_detail.html
@@ -13,14 +13,7 @@
   <script src="{{ host_prefix }}/static/js/bootstrap.min.js"></script>
 </head>
 
-<body>
-  <nav class="navbar navbar-light bg-annotate justify-content-center">
-    <a class="navbar-brand" href="{{ host_prefix }}/">
-      <img src="{{ host_prefix }}/static/img/genie.png" width="25px">
-      <span style="margin-left: 5px; font-weight: bold;">factgenie</span>
-    </a>
-  </nav>
-</body>
+{% include 'navbar.html' %}
 
 <div class="container w-50 mt-5">
 
@@ -46,7 +39,7 @@
           <i class="fa fa-play"></i> Run evaluation
         </a>
         <a onclick="stopLlmEval('{{ campaign_id }}')" class="btn btn-outline-secondary" data-bs-toggle="tooltip"
-          title="Run evaluation">
+          title="Stop evaluation">
           <i class="fa fa-stop"></i> Stop evaluation
         </a>
       </div>
