--- a/factgenie/templates/outputs.html
+++ b/factgenie/templates/outputs.html
@@ -12,14 +12,7 @@
   <script src="{{ host_prefix }}/static/js/bootstrap.min.js"></script>
 </head>
 
-<body>
-  <nav class="navbar navbar-light bg-annotate justify-content-center">
-    <a class="navbar-brand" href="{{ host_prefix }}/">
-      <img src="{{ host_prefix }}/static/img/genie.png" width="25px">
-      <span style="margin-left: 5px; font-weight: bold;">factgenie</span>
-    </a>
-  </nav>
-</body>
+{% include 'navbar.html' %}
 
 <div class="container">
   <!-- <div class="text-center mt-5" style="font-size: 20px; font-weight: bold;">
