--- a/factgenie/templates/forms/error_categories.html
+++ b/factgenie/templates/forms/error_categories.html
@@ -13,8 +13,9 @@
                 aria-labelledby="flush-headingOne-errors" data-bs-parent="#accordionFlush-errors">
                 <div class="accordion-body">
                     <p>
-                        <small class="text-muted">Set error categories used for annotation. The order of the category (0
-                            to n) corresponds to value of the <code>type</code> field in the annotation JSON. <b>For LLM
+                        <small class="text-muted">Error categories used for annotation. The order of the category (0
+                            to n) corresponds to value of the <code>type</code> field in the annotation JSON. These
+                            categories will be available to human annotators. <b>For LLM
                                 eval, you also need to instruct the model to produce exactly these
                                 categories.</b></small>
                     </p>
