--- a/factgenie/templates/index.html
+++ b/factgenie/templates/index.html
@@ -64,7 +64,7 @@
     <div class="col-md-4" {% if not allow_browse %}style="display: none;" {% endif %}>
       <div class="card text-center mt-3">
         <div class="card-body">
-          <a href="{{ host_prefix }}/datasets">
+          <a href="{{ host_prefix }}/annotations">
             <img src="{{ host_prefix }}/static/img/output.png" class="intro-img">
             <h5 class="card-title">Annotations</h5>
           </a>
