--- a/factgenie/templates/llm_eval.html
+++ b/factgenie/templates/llm_eval.html
@@ -84,65 +84,9 @@
                     value="{{ default_campaign_id }}" required>
                 </div>
 
-                <div class="accordion accordion-flush" id="accordion-data">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingOne-data">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne-data" aria-expanded="false"
-                        aria-controls="flush-collapseOne-data">
-                        <i class="fa fa-database"></i>
-                        <span style="margin-left: 10px;">Data</span>
-                      </button>
-                    </h2>
-                    <div id="flush-collapseOne-data" class="accordion-collapse collapse"
-                      aria-labelledby="flush-headingOne-data" data-bs-parent="#accordion-data">
+                {% include 'forms/data_selection.html' %}
 
-                      <div class="accordion-body">
-                        <p>
-                          <small class="text-muted">Select the combinations of datasets, splits, and model outputs (only
-                            the available
-                            combinations will be included in the evaluation).</small>
-                        </p>
-                        Datasets
-                        <div class="form-group">
-                          {% for output in model_outs.datasets %}
-                          <input type="checkbox" class="btn-check btn-check-data btn-check-dataset"
-                            id="btn-check-dataset-{{ output }}" data-content="{{ output }}" autocomplete="off">
-                          <label class="btn btn-outline-secondary btn-sm" for="btn-check-dataset-{{ output }}">{{
-                            output
-                            }}</label>
-                          {% endfor %}
-                        </div>
-                        Splits
-                        <div class="form-group">
-                          {% for output in model_outs.splits %}
-                          <input type="checkbox" class="btn-check btn-check-data btn-check-split"
-                            id="btn-check-split-{{ output }}" data-content="{{ output }}" autocomplete="off">
-                          <label class="btn btn-outline-secondary btn-sm" for="btn-check-split-{{ output }}">{{ output
-                            }}</label>
-                          {% endfor %}
-                        </div>
-                        Outputs
-                        <div class="form-group">
-                          {% for output in model_outs.setup_ids %}
-                          <input type="checkbox" class="btn-check btn-check-data btn-check-output"
-                            id="btn-check-out-{{ output }}" data-content="{{ output }}" autocomplete="off">
-                          <label class="btn btn-outline-secondary btn-sm" for="btn-check-out-{{ output }}">{{ output
-                            }}</label>
-                          {% endfor %}
-                        </div>
-                        <button class="btn btn-secondary btn-sm mt-3" type="button" data-bs-toggle="collapse"
-                          onclick="updateSelectedDatasets()" data-bs-target="#selectedDatasets" aria-expanded="false"
-                          aria-controls="selectedDatasets">Show
-                          included data</button>
-                        <div class="collapse" id="selectedDatasets">
-                          <div class="card card-body font-monospace" id="selectedDatasetsContent">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+
                 <div class="accordion accordion-flush" id="accordion-llm-config">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingTwo-data">
@@ -174,7 +118,7 @@
                   </div>
                 </div>
 
-                {% include 'error_categories.html' %}
+                {% include 'forms/error_categories.html' %}
 
               </form>
             </div>
