Report on LLM API errors in the web interface

--- a/factgenie/templates/llm_eval_detail.html
+++ b/factgenie/templates/llm_eval_detail.html
@@ -52,6 +52,7 @@
           style="width: {{ (finished_examples|length) / (overview | length) * 100 }}%;">
         </div>
       </div>
+      <div id="log-area" class="font-monospace mt-3"></div>
       <hr>
     </div>
 
