--- a/factgenie/static/css/custom.css
+++ b/factgenie/static/css/custom.css
@@ -834,3 +834,16 @@ a:hover {
 .CodeMirror-scroll {
     min-height: 150px !important;
 }
+
+.btn-err-cat-label {
+    color: #4a4a4a;
+}
+
+.btn-err-cat-label:not(.active) {
+    filter: opacity(0.4);
+    border-color: transparent !important;
+}
+
+.btn-err-cat-label.active {
+    font-weight: bold;
+}
