--- a/factgenie/templates/campaigns/annotate_body.html
+++ b/factgenie/templates/campaigns/annotate_body.html
@@ -55,23 +55,22 @@
               </div>
             </div>
             <div id='output-content'>
+              <div>
+                <div class="mt-3 mb-4" role="group" aria-label="Basic radio toggle button group">
+                  {% for category in annotation_span_categories %}
+                  <input type="radio" class="btn-check btn-outline-secondary btn-err-cat" name="btnradio"
+                    id="btnradio{{ loop.index }}" autocomplete="off" {% if loop.first %}checked{% endif %}
+                    data-cat-idx="{{ loop.index - 1 }}">
+                  <label class="btn btn-err-cat-label {% if loop.first %}active{% endif %}"
+                    for="btnradio{{ loop.index  }}" style="background-color: {{ category.color }};">
+                    {{ category.name }}
+                  </label>
+                  {% endfor %}
+                </div>
+              </div>
+              <div id='text-type-info' class='mt-3'>{{ annotator_prompt | safe }}
+              </div>
               <div id='outputarea'>
-                <div id='text-type-info'>{{ annotator_prompt | safe }}
-                </div>
-                <div class="d-flex justify-content-center align-items-center">
-                  <div class="mb-1 mt-3" role="group" aria-label="Basic radio toggle button group">
-                    {% for category in annotation_span_categories %}
-                    <input type="radio" class="btn-check btn-outline-secondary btn-err-cat" name="btnradio"
-                      id="btnradio{{ loop.index }}" autocomplete="off" {% if loop.first %}checked{% endif %}
-                      data-cat-idx="{{ loop.index - 1 }}">
-                    <label class="btn btn-err-cat-label {% if loop.first %}active{% endif %}"
-                      for="btnradio{{ loop.index  }}" style="background-color: {{ category.color }};">
-                      {{ category.name }}
-                    </label>
-                    {% endfor %}
-                  </div>
-                </div>
-
               </div>
             </div>
             <div class="" id="checkbox-annotation-box">
