Display outputs in bootstrap cards

--- a/factgenie/static/css/custom.css
+++ b/factgenie/static/css/custom.css
@@ -147,9 +147,10 @@ pre {
 }
 
 #outputarea {
-    margin-top: 10px;
-    font-family: "IBM Plex Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    font-size: 16px;
+    margin-top: 20px;
+    /* font-family: "IBM Plex Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; */
+    padding: 10px;
+    /* font-size: 16px; */
 }
 
 #outputarea .paragraph {
@@ -312,15 +313,22 @@ pre {
 }
 
 .output-box {
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 2%;
-    margin: 10px;
-    position: relative;
+    /* padding: 20px; */
+    /* border: 1px solid #ddd;
+    border-radius: 2%; */
+    margin-bottom: 10px;
+    /* position: relative; */
+    /* font-size: 16px !important; */
 }
 
-.output-box>pre {
-    margin-bottom: 0px;
+.card-text>pre {
+    font-size: 14px !important;
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+}
+
+.output-box .card-body {
+    padding: 5px;
 }
 
 .annotate-box {
@@ -350,14 +358,14 @@ pre {
 
 
 
-.output-box>label {
+/* .output-box>label {
     position: absolute;
     font-size: smaller;
     top: -17px;
     padding-left: 3px;
     padding-right: 3px;
     background-color: white;
-}
+} */
 
 
 .select2-search--inline {
